--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://a_ide_1995.netlify.com/"
+baseURL: "https://upbeat-jang-4f1c71.netlify.app"
 canonifyurls: true
 title: a_ide_1995
 paginate: 5
