--- a/config.yml
+++ b/config.yml
@@ -76,7 +76,7 @@ params:
       url: "https://www.youtube.com/channel/UCphwYdPnxNiSeGiif-tKGBw"
 
   cover:
-    hidden: false # hide everywhere but not in structured data
+    hidden: true # hide everywhere but not in structured data
     hiddenInList: true # hide on list pages and home
     hiddenInSingle: true # hide on single page
 
