--- a/config.yml
+++ b/config.yml
@@ -38,7 +38,7 @@ params:
   comments: false
   hidemeta: false
   hideSummary: false
-  showtoc: false
+  showtoc: true
   tocopen: false
 
   assets:
@@ -119,13 +119,7 @@ outputs:
     - HTML
     - RSS
     - JSON # is necessary
-
-# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
-# pygmentsUseClasses: true
-# markup:
-#     highlight:
-#         # anchorLineNos: true
-#         codeFences: true
-#         guessSyntax: true
-#         lineNos: true
-#         style: monokai
+cover:
+  hidden: true # hide everywhere but not in structured data
+  hiddenInList: true # hide on list pages and home
+  hiddenInSingle: true # hide on single page
