--- a/config.yml
+++ b/config.yml
@@ -122,3 +122,7 @@ outputs:
 cover:
   hidden: true # hide everywhere but not in structured data
   hiddenInSingle: true # hide on single page
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
