デカフェに関する記事を追加

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://upbeat-jang-4f1c71.netlify.app"
+baseURL: "a-ide-1995.com"
 publishDir: "public"
 canonifyurls: true
 title: a_ide_1995
