--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,8 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 
+googleAnalytics: UA-68929602-3
+
 minify:
   disableXML: true
   minifyOutput: true
