パーマリンクを設定

--- a/config.yml
+++ b/config.yml
@@ -43,6 +43,9 @@ params:
   showtoc: true
   tocopen: false
 
+  permalinks:
+    blog: "/:section/:year/:month/:day/:slug"
+
   assets:
     # disableHLJS: true # to disable highlight.js
     # disableFingerprinting: true
