--- a/.textlintrc
+++ b/.textlintrc
@@ -1,14 +1,12 @@
-{
-  "rules": {
-    "preset-smarthr": {
-      "sentence-length": false,
-      "ja-no-mixed-period": false
-    },
-    "prh": {
-      "rulePaths": [
-        "dict/smarthr-prh-basic.yml",
-        "dict/smarthr-prh-tech-word.yml"
-      ]
-    }
-  }
-}
+filters:
+  comments: true
+rules:
+  preset-ja-technical-writing:
+    no-exclamation-question-mark: false
+    max-kanji-continuous-len: false
+    sentence-length:
+      max: 120
+preset-ja-spacing:
+  ja-space-around-code:
+    before: true
+    after: true
