--- a/.textlintrc
+++ b/.textlintrc
@@ -1,12 +1,33 @@
-filters:
-  comments: true
-rules:
-  preset-ja-technical-writing:
-    no-exclamation-question-mark: false
-    max-kanji-continuous-len: false
-    sentence-length:
-      max: 120
-preset-ja-spacing:
-  ja-space-around-code:
-    before: true
-    after: true
+{
+  "plugins": {
+    "@textlint/markdown": {
+      "extensions": [".md"]
+    }
+  },
+  "rules": {
+    "preset-ja-technical-writing": {
+      "no-exclamation-question-mark": {
+        "allowFullWidthExclamation": true,
+        "allowFullWidthQuestion": true
+      },
+      "no-doubled-joshi": {
+        "strict": false,
+        "allow": ["か"]
+      }
+    },
+    "preset-ja-spacing": {
+      "ja-space-between-half-and-full-width": {
+        "space": "always",
+        "exceptPunctuation": true
+      },
+      "ja-space-around-code": {
+        "before": true,
+        "after": true
+      }
+    },
+    "ja-technical-writing/ja-no-mixed-period": {
+      "allowPeriodMarks": [":"]
+    },
+    "ja-technical-writing/sentence-length": false
+  }
+}
