--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/Aseiide/Blog/issues"
   },
-  "homepage": "https://github.com/Aseiide/Blog#readme"
+  "homepage": "https://github.com/Aseiide/Blog#readme",
+  "devDependencies": {
+    "textlint": "^12.1.1",
+    "textlint-rule-preset-ja-spacing": "^2.2.0",
+    "textlint-rule-preset-ja-technical-writing": "^7.0.0"
+  }
 }
