--- a/.github/workflows/textlint.yml
+++ b/.github/workflows/textlint.yml
@@ -1,45 +1,66 @@
-# This is a basic workflow to help you get started with Actions
-
 name: reviewdog
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+permissions:
+  pull-requests: write
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  reviewdog-github-check:
-    name: reviewdog (github-check)
+  shellcheck:
+    name: runner / shellcheck
     runs-on: ubuntu-latest
-    
     steps:
-        #reviewdogのアクション
-      - uses: reviewdog/action-setup@v1
+      - uses: actions/checkout@v3
+      - uses: haya14busa/action-cond@v1
+        id: reporter
         with:
-          reviewdog_version: latest
+          cond: ${{ github.event_name == 'pull_request' }}
+          if_true: "github-pr-review"
+          if_false: "github-check"
+      - uses: reviewdog/action-shellcheck@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: ${{ steps.reporter.outputs.value }}
+          level: warning
 
-        #textlintを動かすためのnodeアクション
-      - uses: actions/setup-node@v2
+  # hadolint:
+  #   name: runner / hadolint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: haya14busa/action-cond@v1
+  #       id: reporter
+  #       with:
+  #         cond: ${{ github.event_name == 'pull_request' }}
+  #         if_true: "github-pr-review"
+  #         if_false: "github-check"
+  #     - uses: reviewdog/action-hadolint@v1
+  #       with:
+  #         github_token: ${{ secrets.github_token }}
+  #         reporter: ${{ steps.reporter.outputs.value }}
+  #         level: warning
 
-      - uses: actions/checkout@v2
+  misspell:
+    name: runner / misspell
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: reviewdog/action-misspell@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
+          level: warning
+          locale: "US"
 
-      - name: Install textlint
-        run:  'npm install --save-dev textlint textlint-rule-preset-smarthr textlint-rule-prh textlint-filter-rule-allowlist textlint-rule-aws-spellcheck'
-      
-      - name: Install dependent module
-        run: npm install
-      
-      - name: Execute textlint for ブログ記事 or 技術同人誌
-        run: |
-          npx textlint -f checkstyle "content/blog/*/index.md" >> .textlint.log
-
-      - name: Run reviewdog
-        # textlintで文章上のミスがあった場合のみ、reviewdogを実行させるようにする
-        if: failure()
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cat .textlint.log
-          cat .textlint.log | reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
+  alex:
+    name: runner / alex
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: reviewdog/action-alex@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-check
+          level: warning
