--- a/.textlintrc
+++ b/.textlintrc
@@ -1,14 +1,5 @@
 {
   "rules": {
-      "preset-smarthr":{
-          "sentence-length": false,
-          "ja-no-mixed-period": false
-      },
-      "prh": {
-          "rulePaths": [
-              "dict/smarthr-prh-basic.yml",
-              "dict/smarthr-prh-tech-word.yml"
-          ]
-      }
+    "preset-smarthr": true
   }
 }
