--- a/.github/workflows/textlint.yml
+++ b/.github/workflows/textlint.yml
@@ -1,45 +1,17 @@
-# This is a basic workflow to help you get started with Actions
-
 name: reviewdog
-
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request:
-    branches: [ main ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+on: [pull_request]
 jobs:
-  reviewdog-github-check:
-    name: reviewdog (github-check)
+  textlint:
+    name: runner / textlint
     runs-on: ubuntu-latest
-    
     steps:
-        #reviewdogのアクション
-      - uses: reviewdog/action-setup@v1
-        with:
-          reviewdog_version: latest
-
-        #textlintを動かすためのnodeアクション
-      - uses: actions/setup-node@v2
-
       - uses: actions/checkout@v2
-
-      - name: Install textlint
-        run:  'npm install --save-dev textlint textlint-rule-preset-smarthr textlint-rule-prh textlint-filter-rule-allowlist textlint-rule-aws-spellcheck'
-      
-      - name: Install dependent module
-        run: npm install
-      
-      - name: Execute textlint for ブログ記事 or 技術同人誌
-        run: |
-          npx textlint  "./content/blog/*/index.md" >> .textlint.log
-
-      - name: Run reviewdog
-        # textlintで文章上のミスがあった場合のみ、reviewdogを実行させるようにする
-        if: failure()
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          cat .textlint.log
-          cat .textlint.log | reviewdog -f=checkstyle -name="textlint" -reporter="github-pr-review"
+        with:
+          submodules: true
+      - name: textlint-github-pr-review
+        uses: tsuyoshicho/action-textlint@v3
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          level: warning
+          textlint_flags: "./content/blog/*/index.md"
