--- a/.textlintrc
+++ b/.textlintrc
@@ -1,5 +1,8 @@
 {
   "rules": {
-    "preset-smarthr": true
+    "ja-no-mixed-period": {
+      "allowPeriodMarks": ["}}"],
+      "forceAppendPeriod": true
+    }
   }
 }
